--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ php:
   - 5.5
   - 5.6
 
+sudo: false
+
+cache:
+    directories:
+        - $HOME/.composer/cache
+
 before_install:
   - travis_retry composer self-update
 
