--- a/.editorconfig
+++ b/.editorconfig
@@ -3,7 +3,9 @@ root = true
 
 ; Unix-style newlines
 [*]
-end_of_line = LF
+end_of_line = lf
+insert_final_newline = true
+trim_trailing_whitespace = true
 
 [*.php]
 indent_style = space
