--- a/.gitattributes
+++ b/.gitattributes
@@ -1,4 +1,5 @@
 /spec export-ignore
+.coveralls.yml export-ignore
 .editorconfig export-ignore
 .gitattributes export-ignore
 .gitignore export-ignore
